# asprin

./: COPYING  INSTALL  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  configure  configure.in
autom4te.cache/: output.0  traces.0
include/asprin/: asprin-sh.h  asprin.h  config.h.in  shell.h  stamp-h1
src/: Makefile.am  Makefile.in  asprin-sh.c  asprin.c  shell.c
